# Online-Mart

./: README.md  compose-kong.yaml  compose.yaml  compose_with_kong.yaml  inv_database.txt  prod_database.txt
Inventory_Services/: compose.yaml
Inventory_Services/.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _random.meta.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.meta.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.meta.json  argparse.data.json  (+158 more)
Inventory_Services/inventory_consumer/: .env
Inventory_Services/inventory_producer/: .env  Dockerfile.dev
Order_Services/: ord_database.txt
Order_Services/order_consumer/: .env
Product_Services/: Dockerfile.prod  compose.yaml  database.txt  prod_database.txt
Product_Services/product_consumer/: .env  pyproject.toml
Product_Services/product_producer/: .env
Product_Services/shared_data/: pyproject.toml
User_Services/: compose.yaml  user_database.txt
User_Services/user_producer/: pyproject.toml
User_Services/user_producer/api/: main.py  user_auth.py  user_model.py  user_model2.py
User_Services/user_producer/api/routers/: user.py
User_Services/user_producer/common_files/: database.py  settings.py
(+3226 files in other folders)
